# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import posesRouter from "./poses";
 import tagLabelsRouter from "./tagLabels";
 import routinesRouter from "./routines";
+import sessionsRouter from "./sessions";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(posesRouter);
 router.use(tagLabelsRouter);
 router.use(routinesRouter);
+router.use(sessionsRouter);
 
 export default router;
