# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./poses";
 export * from "./tagLabels";
 export * from "./routines";
+export * from "./sessions";
